--- a/assets/style.css
+++ b/assets/style.css
@@ -110,6 +110,13 @@ footer a {
   color: #d5d5d5;
 }
 
+hr.light-100 {
+  border-top: 1px solid #d5d5d5;
+  width: 100%;
+  margin-top: .8rem; 
+  margin-bottom: 1rem;
+}
+
 
 
 
@@ -121,17 +128,39 @@ footer a {
 
 /*---Media Queries --*/
 @media (max-width: 992px) {
+  .social a {
+    font-size: 4em;
+    padding: 2rem;
+  }
 
   }
 @media (max-width: 768px) {
+
+.carousel-caption {
+  
+  top: 45%;
+  
+}
+
+.carousel-caption h1 {
+  font-size: 350%
+}
+.display-4{
+  font-size: 200%;
+}
+
   
 }
 @media (max-width: 576px) {
+  .social a {
+    font-size: 2.5em;
+    padding: 1.2rem;
+  }
   
 }
 
 
-/*---Firefox Bug Fix --*/
+
 .carousel-item {
   transition: -webkit-transform 0.5s ease;
   transition: transform 0.5s ease;
@@ -155,7 +184,7 @@ figure {
   height: 100%;
 }
 #fixed {
-  background-image: url('');
+  background-image: url('images\ /');
   position: fixed;
   display: block;
   top: 0;
