--- a/assets/style.css
+++ b/assets/style.css
@@ -184,7 +184,7 @@ figure {
   height: 100%;
 }
 #fixed {
-  background-image: url('images\ /');
+  background-image: url("../assets/images/mac.jpg\ /");
   position: fixed;
   display: block;
   top: 0;
