--- a/assets/style.css
+++ b/assets/style.css
@@ -36,7 +36,13 @@ html, body {
 .carousel-caption h1 {
   font-size: 500%;
   text-transform: uppercase;
-  text-shadow: 1px 1px 10px #000;
+  text-shadow: 1px 1px 15px #000;
+}
+
+.carousel-caption h3 {
+  font-size: 200%; 
+  font-weight: 500;
+  text-shadow: 1px 1px 10px #000; 
 }
 
 .jumbotron{
@@ -105,6 +111,7 @@ hr.light {
   margin-top: .8rem; 
   margin-bottom: 1rem;
 }
+
 
 footer a {
   color: #d5d5d5;
