--- a/assets/style.css
+++ b/assets/style.css
@@ -27,6 +27,11 @@ html, body {
   height: 100%;
 }
 
+/* .d-blockw-100  img {
+  width: 100%;
+  height: 100%;
+} */
+
 .carousel-caption {
   position: absolute;
   top: 50%;
@@ -173,13 +178,21 @@ hr.light-100 {
 
 
 
-.carousel-item {
+/* .carousel-item {
   transition: -webkit-transform 0.5s ease;
   transition: transform 0.5s ease;
   transition: transform 0.5s ease, -webkit-transform 0.5s ease;
   -webkit-backface-visibility: visible;
   backface-visibility: visible;
-}
+} */
+
+/* .carousel-item {
+  transition: -webkit-transform 0.5s ease;
+  transition: transform 0.5s ease;
+  transition: transform 0.5s ease, -webkit-transform 0.5s ease;
+  -webkit-backface-visibility: visible;
+  backface-visibility: visible;
+} */
 /*--- Fixed Background Image --*/
 figure {
   position: relative;
