--- a/assets/style.css
+++ b/assets/style.css
@@ -1,25 +1,23 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
+@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,700");
 
-html, body {
+html,
+body {
   height: 100%;
   width: 100%;
-  font-family: 'Poppins', sans-serif;
-  color: 222; 
+  font-family: "Poppins", sans-serif;
+  color: 222;
 }
 
 .navbar {
-  padding: .8rem;
-
+  padding: 0.8rem;
 }
 
 .navbar-nav li {
   padding-right: 20px;
-
 }
 
 .nav-link {
   font-size: 1.1em !important;
-
 }
 
 .carousel-inner img {
@@ -45,12 +43,12 @@ html, body {
 }
 
 .carousel-caption h3 {
-  font-size: 200%; 
+  font-size: 200%;
   font-weight: 500;
-  text-shadow: 1px 1px 10px #000; 
+  text-shadow: 1px 1px 10px #000;
 }
 
-.jumbotron{
+.jumbotron {
   padding: 1rem;
   border-radius: 0;
 }
@@ -67,8 +65,8 @@ html, body {
 .welcome hr {
   border-top: 2px solid #b4b4b4;
   width: 95%;
-  margin-top: .3rem;
-  margin-bottom: 1rem; 
+  margin-top: 0.3rem;
+  margin-bottom: 1rem;
 }
 
 .fun {
@@ -86,11 +84,11 @@ html, body {
 }
 
 .fa-youtube {
-  color: #bb0000; 
+  color: #bb0000;
 }
 
 .fa-linkedin {
-  color: blue; 
+  color: blue;
 }
 
 .fa-github {
@@ -101,7 +99,7 @@ html, body {
   color: blue;
 }
 
-.fa-github:hover, 
+.fa-github:hover,
 .fa-linkedin:hover,
 .fa-file:hover,
 .fa-youtube:hover {
@@ -112,16 +110,14 @@ footer {
   background-color: #3f3f3f;
   color: #d5d5d5;
   padding-top: 2rem;
-
 }
 
 hr.light {
   border-top: 1px solid #d5d5d5;
   width: 75%;
-  margin-top: .8rem; 
+  margin-top: 0.8rem;
   margin-bottom: 1rem;
 }
-
 
 footer a {
   color: #d5d5d5;
@@ -130,18 +126,9 @@ footer a {
 hr.light-100 {
   border-top: 1px solid #d5d5d5;
   width: 100%;
-  margin-top: .8rem; 
+  margin-top: 0.8rem;
   margin-bottom: 1rem;
 }
-
-
-
-
-
-
-
-
-
 
 /*---Media Queries --*/
 @media (max-width: 992px) {
@@ -149,34 +136,25 @@ hr.light-100 {
     font-size: 4em;
     padding: 2rem;
   }
-
-  }
+}
 @media (max-width: 768px) {
+  .carousel-caption {
+    top: 45%;
+  }
 
-.carousel-caption {
-  
-  top: 45%;
-  
-}
-
-.carousel-caption h1 {
-  font-size: 350%
-}
-.display-4{
-  font-size: 200%;
-}
-
-  
+  .carousel-caption h1 {
+    font-size: 350%;
+  }
+  .display-4 {
+    font-size: 200%;
+  }
 }
 @media (max-width: 576px) {
   .social a {
     font-size: 2.5em;
     padding: 1.2rem;
   }
-  
 }
-
-
 
 /* .carousel-item {
   transition: -webkit-transform 0.5s ease;
@@ -198,7 +176,7 @@ figure {
   position: relative;
   width: 100%;
   height: 60%;
-  margin: 0!important;
+  margin: 0 !important;
 }
 .fixed-wrap {
   clip: rect(0, auto, auto, 0);
@@ -219,21 +197,13 @@ figure {
   background-size: cover;
   background-position: center center;
   -webkit-transform: translateZ(0);
-          transform: translateZ(0);
+  transform: translateZ(0);
   will-change: transform;
 }
 /*--- Bootstrap Padding Fix --*/
 [class*="col-"] {
-    padding: 1rem;
+  padding: 1rem;
 }
-
-
-
-
-
-
-
-
 
 /*
 Extra small (xs) devices (portrait phones, less than 576px)
@@ -251,11 +221,3 @@ Large (lg) devices (desktops, 992px and up)
 Extra (xl) large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) { ... }
 */
-
-
-
-
-
-
-
-
